# passwordManager

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/crypto/: cryptoutils.cpp  cryptoutils.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  newlogindialog.cpp  newlogindialog.h  newlogindialog.ui  stackedwidget.cpp  stackedwidget.h  stackedwidget.ui
src/utils/: fileutils.cpp  fileutils.h
src/vault/: vaultmanager.cpp  vaultmanager.h
